--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,5 @@
 ---
-title: "About the GeoEpi Lab"
+title: "About the GeoEpi Group"
 image: images/geoepi_logo_sm.png
 about:
   template: marquee
@@ -21,7 +21,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-**GeoEpi** (Geographical Epidemiology) Lab conducts research on animal disease transmission and outbreak dynamics. Using advanced statistical modeling, bioinformatics, and artificial intelligence, our work spans molecular to landscape scales, revealing crucial insights into disease ecology and management.
+The **GeoEpi** (Geographical Epidemiology) Group conducts research on animal disease transmission and outbreak dynamics. Using advanced statistical modeling, bioinformatics, and artificial intelligence, our work spans molecular to landscape scales, revealing crucial insights into disease ecology and management.
 
 # Random Code
 
