--- a/pindex.qmd
+++ b/pindex.qmd
@@ -23,6 +23,4 @@ author: ""
 date-modified: ""
 ---
 
-# [Projects]{.third-color}
-
-### Project descriptions to be added here
+## [Group Projects]{.third-color}
