--- a/index.qmd
+++ b/index.qmd
@@ -18,8 +18,8 @@ editor_options:
 ---
 
 <div>
-
 # GeoEpi Group
-Geographical Epidemiology
-
+<span style="font-size: 18px;">
+The GeoEpi Group applies geographical epidemiology to investigate animal disease transmission and outbreak dynamics. Leveraging statistical and mathematical modeling, bioinformatics, and artificial intelligence, our work aims to bridge the molecular and landscape scales to reveal insights into the ecology and spatiotemporal dynamics of foreign, transboundary, emerging, and zoonotic animal diseases.
+</span>
 <div>
